--- a/bt3103_proj/package.json
+++ b/bt3103_proj/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
     "firebase": "^10.6.0",
     "firebaseui": "^6.1.0",
